--- a/addons/godot_gameplay_systems/plugin.cfg
+++ b/addons/godot_gameplay_systems/plugin.cfg
@@ -1,6 +1,6 @@
 [plugin]
 
-name="GGS"
+name="gameplay_systems"
 description="Godot Gameplay Systems (formerly godot gameplay attributes) is a set of nodes and resources which speed up development of skills and attribute based gameplay mechanisms."
 author="OctoD"
 version="1.0.0"
