--- a/addons/godot_gameplay_systems/plugin.cfg
+++ b/addons/godot_gameplay_systems/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="gameplay_systems"
-description="Godot Gameplay Systems (formerly godot gameplay attributes) is a set of nodes and resources which speed up development of skills and attribute based gameplay mechanisms."
-author="OctoD"
+name="Gameplay Ability System"
+description="Fork from OctoD's Godot Gameplay Systems (formerly godot gameplay attributes)"
+author="Jeeco"
 version="1.0.0"
 script="plugin.gd"
